--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "@storybook/test-runner": "^0.9.0",
     "@storybook/testing-library": "^0.0.11",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "jest-environment-node": "^28.0.0",
+    "jest-runner": "^28.0.0",
     "msw": "^0.42.0",
     "msw-storybook-addon": "^1.6.3",
     "prop-types": "^15.8.1",
